--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
+Authlib==1.5.2
 blinker==1.9.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+cryptography==44.0.2
 Flask==3.1.0
 gunicorn==23.0.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 packaging==25.0
+pycparser==2.22
+python-dotenv==1.1.0
+requests==2.32.3
+urllib3==2.4.0
 Werkzeug==3.1.3
